--- a/roles/php7-fpm/templates/php.ini.j2
+++ b/roles/php7-fpm/templates/php.ini.j2
@@ -7,7 +7,7 @@ zlib.output_compression = Off
 implicit_flush = Off
 unserialize_callback_func =
 serialize_precision = 17
-disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_multi_exec,parse_ini_file,show_source,mail
+disable_functions = 
 disable_classes =
 zend.enable_gc = On
 expose_php = On
