add solr search module

--- a/roles/php7-fpm/templates/php.ini.j2
+++ b/roles/php7-fpm/templates/php.ini.j2
@@ -7,7 +7,7 @@ zlib.output_compression = Off
 implicit_flush = Off
 unserialize_callback_func =
 serialize_precision = 17
-disable_functions = 
+disable_functions =
 disable_classes =
 zend.enable_gc = On
 expose_php = On
@@ -40,7 +40,7 @@ enable_dl = Off
 file_uploads = On
 upload_max_filesize = 10M
 max_file_uploads = 20
-allow_url_fopen = Off
+allow_url_fopen = On
 allow_url_include = Off
 default_socket_timeout = 60
 magic_quotes_gpc = Off
