--- a/roles/base/templates/etc_motd.j2
+++ b/roles/base/templates/etc_motd.j2
@@ -1,3 +1,3 @@
-            Dakota Funds Production Node
+            Dakota Funds {{env}} Node
 
 All connections are monitored and recorded, Disconnect IMMEDIATELY if you are not an authorized user.
